# rustoa

./: .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  README.md
.github/workflows/: autofmt.yml
src/: lib.rs
