[package]
name = "rustoa"
version = "0.1.0"
authors = ["Yash Karandikar <nerdstep710@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures = "0.3.5"