[package]
name = "rustoa"
version = "0.1.0"
description = "Rust bindings to The Orange Alliance API"
authors = ["Yash Karandikar <nerdstep710@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/karx1/rustoa"
repository = "https://github.com/karx1/rustoa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }